--- a/backend/package.json
+++ b/backend/package.json
@@ -1,8 +1,10 @@
 {
   "dependencies": {
     "axios": "^1.13.1",
+    "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "nodemon": "^3.1.10",
     "pg": "^8.16.3",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.37.7"
